--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,27 @@
-.svn
-test
-*.o
 *.a
+*.dylib*
+*.exe
+*.lss
+*.lst
+*.o
+*.obj
+*.orig
+*.patch
+*.pdb
 *.so
 *.swp
-*.patch
-tags
-*.dylib*
+.dub
+.idea
+.svn
+.vscode
+DJSON-test-*
+DJSON.dll
+DJSON.dylib
+DJSON.lib
+DJSON_test
+DJSON_test_utils
+__dummy.html
 build/
-cJSON_test
-cJSON_test_utils
 libcjson.so.*
 libcjson_utils.so.*
-*.orig
-.vscode
-.idea
-cmake-build-debug
-*.lst
-*.lss
+tags
