--- a/library_config/libcjson_utils.pc.in
+++ b/library_config/libcjson_utils.pc.in
@@ -3,8 +3,8 @@ includedir=@CMAKE_INSTALL_FULL_INCLUDEDIR@
 
 Name: libcjson_utils
 Version: @PROJECT_VERSION@
-Description: An implementation of JSON Pointer, Patch and Merge Patch based on cJSON.
-URL: https://github.com/DaveGamble/cJSON
+Description: An implementation of JSON Pointer, Patch and Merge Patch based on BC_JSON.
+URL: https://github.com/DaveGamble/BC_JSON
 Libs: -L${libdir} -lcjson_utils
 Cflags: -I${includedir} -I${includedir}/cjson
 Requires: libcjson
